# multi_thread

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: CMakeLists.txt  native-lib.cpp  test-lib.cpp
app/src/main/cpp/src/demo/: CMakeLists.txt  demo.c  demo.h
app/src/main/java/com/example/myapplicationcpp/: MainActivity.java  TestLog.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
